# thermalright-lcd-control

./: .gitignore  Makefile  README.md  create_package.sh  gui_config.yaml  install.sh  pyproject.toml  run_service.sh  test_device_communication.py  uninstall.sh
debian/: postinst
doc/: HOWTO.md
releases/: thermalright-lcd-control-1.1.1-1.noarch.rpm  thermalright-lcd-control_1.1.1_all.deb
resources/: config.yaml  gui_config.yaml
resources/config/: config_320240.yaml  config_320320.yaml  config_480480.yaml  device_config.yaml
resources/themes/presets/: config_1.yaml  config_2.yaml  config_3.yaml  config_4.yaml  config_5.yaml  config_6.yaml
resources/themes/presets/320240/: config_1.yaml  config_2.yaml  config_3.yaml  config_4.yaml  config_5.yaml  config_6.yaml
resources/themes/presets/320320/: config_1.yaml
resources/themes/presets/480480/: config_1.yaml
scripts/: postinst  preinst  thermalright-lcd-control.desktop  thermalright-lcd-control.service
src/thermalright_lcd_control/: device_init.py  main_gui.py  service.py
src/thermalright_lcd_control/common/: logging_config.py  supported_devices.py
src/thermalright_lcd_control/device_controller/: __init__.py  controller_main.py  device_controller.py  device_loader.py  hid_detector.py  usb_detector.py
src/thermalright_lcd_control/device_controller/display/: __init__.py  config.py  config_loader.py  device_loader.py  display_device.py  font_manager.py  frame_manager.py  frozen_warframe_lcd.py  generator.py  hid_devices.py  new_device_example.py  utils.py  (+2 more)
src/thermalright_lcd_control/gui/: main_window.py
(+11 files in other folders)
