[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thermalright-lcd-control"
version = "1.3.0"
description = "Linux Thermal rigth lcd display control"
authors = [{ name = "REJEB BEN REJEB", email = "benrejebrejeb@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "PySide6>=6.10.0",
    "hid>=1.0.8",
    "psutil>=7.1.3",
    "opencv-python>=4.12.0.88",
    "pyusb>=1.3.1",
    "pillow>=12.0.0",
    "pyyaml>=6.0.2",
]
